--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main class="wrapper">
 
-        <h2 class="subheader">Place form code below</h2>
+        <p>This page demonstrates data processing of query string data using client side JavaScript. Upon submission, the shipping info is displayed and title case is applied to the Shipping Info.</p>
         <div id="output">
             <form method="get" action="" class="main-form">
                 <div>
